--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
             <div class="position-absolute top-50 start-50">
 
-        <iframe width="0" height="0" src="https://www.youtube.com/embed/QFIKRwBoDNI" frameborder="0"
+        <iframe width="0" height="0" src="https://www.youtube.com/embed/QFIKRwBoDNI&autoplay=1" frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
          allowfullscreen></iframe>
 
