--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
 
             <div class="position-absolute top-50 start-50">
 
-        <iframe width="0" height="0" src="https://www.youtube.com/embed/QFIKRwBoDNI&autoplay=1" frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-         allowfullscreen></iframe>
+        <embed src="https://www.youtube.com/watch?v=QFIKRwBoDNI&t=47s" loop="true" autostart="true" width="2" height="0">
 
 
             </div>
