--- a/index.html
+++ b/index.html
@@ -15,9 +15,13 @@
 <body class='body'>
 
     <!-- NavBar of the website -->
+    
 
     <main>
         <div class="container">
+            
+            <embed height="0" width="0"
+            src="http://youtube.googleapis.com/v/VIDEO_ID&autoplay=1&loop=1" />
 
 
             <div class="position-absolute top-0 start-0"><img src="img/doom_PNG19.png" alt=""></div>
