--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
     <main>
         <div class="container">
             
-            <embed height="0" width="0"
-            <iframe width="0" height="0" src="https://www.youtube.com/embed/QFIKRwBoDNI?controls=0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="0" height="0" src="https://www.youtube.com/embed/QFIKRwBoDNI?autoplay=1" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
 
 
             <div class="position-absolute top-0 start-0"><img src="img/doom_PNG19.png" alt=""></div>
